# brain

./: .gitignore  .vercelignore  README.md  docker-compose.yml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh
backend/: requirements.txt
backend/app/: main.py
backend/app/api/endpoints/: chat.py  graph.py  media.py  notes.py  timeline.py
backend/app/core/: config.py  worker.py
backend/app/database/: connection.py  models.py
backend/app/services/diarization/: diarizer.py
backend/app/services/embedding/: embedder.py
backend/app/services/export/: exporter.py
backend/app/services/indexing/: vector_store.py
backend/app/services/ingestion/: pipeline.py  watcher.py
backend/app/services/llm/: llm_service.py
backend/app/services/search/: hybrid_search.py
backend/app/services/segmentation/: segmenter.py
backend/app/services/transcription/: whisper_service.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/graph/: page.tsx
frontend/src/app/notes/: page.tsx
frontend/src/app/player/[id]/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/timeline/: page.tsx
frontend/src/components/: header.tsx  sidebar.tsx
frontend/src/services/: api.ts
src-tauri/: Cargo.toml  tauri.conf.json
