[package]
name = "local-media-brain-desktop"
version = "0.1.0"
description = "Tauri Desktop wrapper for Local Media Brain application"
authors = ["Google DeepMind Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = [ "api-all" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
